change layout so that all player's cards are visible at all time. Refactor code to support this. Fix bug that made cards slide in visually for all players instead of just the active player.

--- a/bgio-tutorial/src/components/Moves/Moves.scss
+++ b/bgio-tutorial/src/components/Moves/Moves.scss
@@ -19,8 +19,9 @@
     }
 
     &__container {
-        width: 500px;
-
+        width: 300px;
+        overflow:visible;
+        white-space:nowrap;
         background-color: black;
         
     }
